﻿Revision history for {{$dist->name}}

{{$NEXT}}

2.016000 2014-06-06T07:53:47Z
 [00 Major]
 - add copyfiles attribute to easily support copying files from build.
 - add srcreadme attribute to control how README is generated in the build tree.
 - Changes.deps* generator now writes files in misc/ to keep top level clutter down.

 [Dependencies::Stats]
 - Dependencies changed since 2.015000, see misc/*.deps* for details
 - develop: +1
 - runtime: +1 ↑2
 - test: ↑2

2.015000 2014-06-03T05:21:36Z
 [00 Major]
 - Bundle now adjusted for use with `dzil bakeini`
 - ini file now baked and bundle free.
 - This means 'dzil authordeps' will cease needing a bundle install ;)

 [Dependencies::Stats]
 - Dependencies changed since 2.014001, see misc/*.deps* for details
 - develop: +40 (suggests: +1 -1)
 - runtime: +1
 - test: ↑1

2.014001 2014-06-02T10:43:25Z
 [Bugfix]
 - Remove trailing whitespace in a parameter.

 [Dependencies::Stats]
 - Dependencies changed since 2.014000, see misc/*.deps* for details
 - runtime: ↑3
 - test: (recommends: ↑1)

2.014000 2014-05-31T22:25:17Z
 [01 Non-Trial release of new experimental feature]
 - See 'bumpversions' note in previous change entry.

 [Bugfix]
 - has_twitter_hash_tags predicate was not configured to exist.

 [Dependencies::Stats]
 - Dependencies changed since 2.013005, see misc/*.deps* for details
 - runtime: ↑3
 - test: ↑1

2.013005 2014-05-26T01:40:29Z
 [01 new experimental feature]
 - new attribute 'bumpversions'
 - uses a combination of BumpVersionAfterRelease and RewriteVersion::Santized instead of Git::NextVersion and
   PkgVersion.

 [02 utils/dep_changes]
 - Wrap length extended to 120 chars.
 - Line breaks no longer occur at (narrow)? no-break space
 - hugelines now 'overflow' instead of hard wrapping.
 - optional dependencies now have their own file.

 [Dependencies::Aggregate]
 - 5.010001 : 297 → 299
 - 5.012005 : 290 → 292
 - 5.018002 : 285 → 288
 - 5.019009 : 277 → 279

 [Dependencies::Stats]