@@ -267,8 +267,11 @@ Dist::Zilla::Plugin::ModuleBuildTiny = 0
 Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
-Data::Difference = 0
+CPAN::Meta = 0
+CPAN::Meta::Prereqs::Diff = 0
 Net::GitHub = 0
+JSON = 0
+JSON::XS = 0
 
 [Prereqs / testreqs]
 -phase = test
